<resources>
    <string name="app_name">Bac Quizz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bac_l">Bac L</string>
    <string name="ma_fiche">Ma fiche</string>
    <string name="fiche_revision">Fiche révision</string>
    <string name="bac_s">Bac S</string>
    <string name="bac_es">Bac ES</string>
    <string name="quizz">Quizz</string>
    <string name="i">i</string>
    <string name="votre_question_">Votre question:</string>
    <string name="vos_r_ponses">Vos réponses</string>
    <string name="la_bonne_r_ponse">La bonne réponse</string>
    <string name="mauvaise_r_ponse_1">Mauvaise réponse 1</string>
    <string name="mauvaise_r_ponse_2">Mauvaise réponse 2</string>
    <string name="mauvaise_r_ponse_3">Mauvaise réponse 3</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="title_activity_fiche_revision">FicheRevision</string>
    <string name="title_activity_chapitre1">Chapitre1</string>
    <string name="no_notes">Aucune Fiche</string>
    <string name="no_questions">Aucune Questions</string>
    <string name="menu_insert">Ajouter une fiche</string>
    <string name="menu_delete">Supprimer la fiche</string>
    <string name="menu_insert_question">Ajouter une question</string>
    <string name="menu_delete_question">Supprimer la question </string>
    <string name="menu_quizz"> Faire le quizz de cette fiche</string>
    <string name="menu_envoi_quizz"> envoyer ce quizz à un ami</string>
    <string name="title">Nom de la fiche</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Fiche</string>
</resources>