<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/ma_fiche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/ma_fiche" />

    <Button
        android:id="@+id/quizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ma_fiche"
        android:layout_centerHorizontal="true"
        android:text="@string/quizz" />

    <Button
        android:id="@+id/fiche_revision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quizz"
        android:layout_centerHorizontal="true"
        android:text="@string/fiche_revision" />

</RelativeLayout>