<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="#689A92"
=======
>>>>>>> 6ac44a2ee7d0f6d6f3039505167754541d75f7f2
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnQuizz"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/i" 
<<<<<<< HEAD
        android:onClick="onClickInfo" />
=======
        android:onClick="onClickInfo"/>
>>>>>>> 6ac44a2ee7d0f6d6f3039505167754541d75f7f2

    <Button
        android:id="@+id/ma_fiche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fiche_revision"
        android:layout_centerHorizontal="true"
        android:onClick="onClickES"
        android:text="@string/bac_es" />

    <Button
        android:id="@+id/quizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ma_fiche"
        android:layout_centerHorizontal="true"
        android:onClick="onClickL"
        android:text="@string/bac_l" />

    <Button
        android:id="@+id/fiche_revision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quizz"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:onClick="onClickS"
        android:text="@string/bac_s" />

</RelativeLayout>